--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Coursera</title>
+</head>
+<body>
+	<h1>coursera</h1>
+</body>
+</html>
